added header,home,footer,contact us component

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+<footer>
+  <section class="footer-container">
+    <!-- <article class="article-text">
+        <p>All rights reserved. Powered by the Softuni student.</p>
+    </article> -->
+    <article class="footer-text-working">
+      <h4>WORKING HOURS</h4>
+      <p>
+        We work 7 days a week, every day excluding major holidays. Contact us if you have an emergency, with our Hotline and Contact form.
+      </p>
+      <p>Monday - Friday:10:00 - 16:00</p>
+      <p>Saturday:12:00 - 15:00</p>
+      <p>Sunday and holidays:09:00 - 12:00</p>
+    </article>
+    <article class="footer-copy-right">
+      <p>Copyright © 2021, Designed & Developed by Themefisher</p>
+    </article>
+  </section>
+
+</footer>
