--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,23 +1,23 @@
 <header>
-  <div class="div-img"><img src="images/books.png" alt="" class="img"></div>
+  <div class="div-img"><img src="/assets/images/books.png" alt="images" class="img"></div>
   <div class="store-name">
     <p class="store-name-p">Book Store</p>
   </div>
   <nav>
     <ul class="nav-ul guest">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Books</a></li>
-      <li><a href="#">Register</a></li>
-      <li><a href="#">Login</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a routerLink="home">Home</a></li>
+      <li><a routerLink="books">Books</a></li>
+      <li><a routerLink="register">Register</a></li>
+      <li><a routerLink="login">Login</a></li>
+      <li><a routerLink="contact">Contact Us</a></li>
     </ul>
 
     <ul class="nav-ul user">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Books</a></li>
-      <li><a href="#">Profile</a></li>
-      <li><a href="#">Logout</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a routerLink="home">Home</a></li>
+      <li><a routerLink="books">Books</a></li>
+      <li><a routerLink="profile">Profile</a></li>
+      <li><a >Logout</a></li>
+      <li><a routerLink="contact">Contact Us</a></li>
     </ul>
   </nav>
 </header>
