--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,19 +5,19 @@
   </div>
   <nav>
     <ul class="nav-ul guest">
-      <li><a routerLink="home">Home</a></li>
-      <li><a routerLink="books">Books</a></li>
-      <li><a routerLink="register">Register</a></li>
-      <li><a routerLink="login">Login</a></li>
-      <li><a routerLink="contact">Contact Us</a></li>
+      <li><a routerLink="home" routerLinkActive="active">Home</a></li>
+      <li><a routerLink="books" routerLinkActive="active">Books</a></li>
+      <li><a routerLink="register" routerLinkActive="active">Register</a></li>
+      <li><a routerLink="login" routerLinkActive="active">Login</a></li>
+      <li><a routerLink="contact" routerLinkActive="active">Contact Us</a></li>
     </ul>
 
     <ul class="nav-ul user">
-      <li><a routerLink="home">Home</a></li>
-      <li><a routerLink="books">Books</a></li>
-      <li><a routerLink="profile">Profile</a></li>
-      <li><a >Logout</a></li>
-      <li><a routerLink="contact">Contact Us</a></li>
+      <li><a routerLink="home" routerLinkActive="active">Home</a></li>
+      <li><a routerLink="books" routerLinkActive="active">Books</a></li>
+      <li><a routerLink="profile" routerLinkActive="active">Profile</a></li>
+      <li><a routerLinkActive="active" >Logout</a></li>
+      <li><a routerLink="contact" routerLinkActive="active">Contact Us</a></li>
     </ul>
   </nav>
 </header>
