--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="div-img"><img src="/assets/images/books.png" alt="images" class="img"></div>
+  <div class="div-img"><img routerLink="home" src="/assets/images/books.png" alt="images" class="img"></div>
   <div class="store-name">
     <p class="store-name-p">Book Store</p>
   </div>
