--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -39,6 +39,7 @@
 }
 
 .register-btn , .login-btn {
+  font-size: 40px;
   text-decoration: none;
   margin: 0 20px 0 0;
   border: 2px solid black;
