--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -11,8 +11,8 @@
     </article>
     <article class="register-login">
       <ul class="register-login-ul">
-        <li><a href="#" class="register-btn">Register</a></li>
-        <li><a href="#" class="login-btn">Login</a></li>
+        <li><a routerLink="/register" class="register-btn">Register</a></li>
+        <li><a routerLink="/login" class="login-btn">Login</a></li>
       </ul>
     </article>
   </section>
