--- a/src/app/core/books/books.component.css
+++ b/src/app/core/books/books.component.css
@@ -23,10 +23,11 @@
 }
 
 .book-item-img {
-  border: 1px solid black;
-  padding: 2px;
+  /*border: 1px solid black;*/
+  /*padding: 2px;*/
   margin-right: 7px;
-  box-shadow: 1px 1px 3px #999999;
+  /*box-shadow: 1px 1px 3px #999999;*/
+  /*max-width: 100%;*/
 }
 
 .book-item-img > img{
