--- a/src/app/core/books/books.component.html
+++ b/src/app/core/books/books.component.html
@@ -1,50 +1,50 @@
 <div class="books-container">
-  <section class="books">
-
-    <div class="book">
+  <section class="books" >
+    <div  class="book" *ngFor="let book of books">
       <section class="book-view">
         <article class="book-item-img">
-          <img src="/assets/images/unnamed.jpg" alt="">
+          <img src="{{book.imgUrl}}" alt="">
         </article>
       </section>
       <section class="book-information">
         <article class="book-item-title">
           <p>
-            Пърси Джаксън и боговете на Олимп - книга 2: Морето на чудовищата</p>
+          {{book.title}}
+          </p>
         </article>
         <article class="book-item-author">
-          <p>ALI ZINAL</p>
+          <p>{{book.author}}</p>
         </article>
         <article class="book-item-price">
-          <p>Price: <span>5.99</span> euro</p>
+          <p>Price: <span>{{book.price}}</span> euro</p>
         </article>
         <article class="btn-more">
-          <a href="">More</a>
+          <a [routerLink]="['/books',book.id]">More</a>
         </article>
       </section>
     </div>
-    <div class="book">
-      <section class="book-view">
-        <article class="book-item-img">
-          <img src="/assets/images/unnamed.jpg" alt="">
-        </article>
-      </section>
-      <section class="book-information">
-        <article class="book-item-title">
-          <p>
-            Пърси Джаксън и боговете на Олимп - книга 2: Морето на чудовищата</p>
-        </article>
-        <article class="book-item-author">
-          <p>ALI ZINAL</p>
-        </article>
-        <article class="book-item-price">
-          <p>Price: <span>5.99</span> euro</p>
-        </article>
-        <article class="btn-more">
-          <a href="">More</a>
-        </article>
-      </section>
-    </div>
+<!--    <div class="book">-->
+<!--      <section class="book-view">-->
+<!--        <article class="book-item-img">-->
+<!--          <img src="/assets/images/unnamed.jpg" alt="">-->
+<!--        </article>-->
+<!--      </section>-->
+<!--      <section class="book-information">-->
+<!--        <article class="book-item-title">-->
+<!--          <p>-->
+<!--            Пърси Джаксън и боговете на Олимп - книга 2: Морето на чудовищата</p>-->
+<!--        </article>-->
+<!--        <article class="book-item-author">-->
+<!--          <p>ALI ZINAL</p>-->
+<!--        </article>-->
+<!--        <article class="book-item-price">-->
+<!--          <p>Price: <span>5.99</span> euro</p>-->
+<!--        </article>-->
+<!--        <article class="btn-more">-->
+<!--          <a href="">More</a>-->
+<!--        </article>-->
+<!--      </section>-->
+<!--    </div>-->
 
 
   </section>
