added register template but I work in it yet!

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="ali">
   <section class="footer-container">
     <!-- <article class="article-text">
         <p>All rights reserved. Powered by the Softuni student.</p>
