--- a/src/app/core/register/register.component.html
+++ b/src/app/core/register/register.component.html
@@ -1,1 +1,86 @@
-<p>register works!</p>
+<div class="register-container" xmlns="http://www.w3.org/1999/html">
+  <form #form="ngForm" (ngSubmit)="registerHandler(form)" xmlns:disabled="http://www.w3.org/1999/xhtml">
+    <div class="form-group">
+      <label for="email"><span><i aria-hidden="true" class="fa fa-envelope"></i></span> Email:</label>
+      <br>
+      <input type="text" name="email" id="email" #emailInput="ngModel" ngModel required email>
+      <ul *ngIf="emailInput.invalid && emailInput.touched" class="errors">
+        <li *ngIf="emailInput.errors?.required">Email is required!</li>
+        <li *ngIf="emailInput.errors?.email">Email is invalid!</li>
+      </ul>
+    </div>
+
+    <div class="form-group">
+      <label for="password"><span><i aria-hidden="true" class="fa fa-lock"></i></span> password:</label>
+      <br>
+      <input type="password" name="password" id="password" #passwordInput="ngModel" ngModel required [minlength]="8">
+      <ul class="errors" *ngIf="passwordInput.invalid && passwordInput.touched">
+        <li *ngIf="passwordInput.errors?.required">Password is required!</li>
+        <li *ngIf="passwordInput.errors?.minlength">Password must be 8 or more characters!</li>
+      </ul>
+    </div>
+
+    <div class="form-group repeatPassword">
+      <label for="repeatPassword"><span><i aria-hidden="true" class="fa fa-lock"></i></span> repeat password:</label>
+      <br>
+      <input type="password" name="repeatPassword" id="repeatPassword" #repeatPassword="ngModel" ngModel required appSameValue="password">
+      <ul class="errors" *ngIf="repeatPassword.invalid && repeatPassword.touched">
+        <li *ngIf="repeatPassword.errors?.required">Repeat Password is required!</li>
+        <li *ngIf="repeatPassword.errors?.firstPassValue">Password and Repeat Password are not matching!</li>
+      </ul>
+    </div>
+
+    <div class="form-group firstName">
+      <label for="first-name"><span><i aria-hidden="true" class="fa fa-user"></i></span> first name:</label>
+      <br>
+      <input type="text" name="first-name" id="first-name" #firstName="ngModel" ngModel required [minlength]="3">
+      <ul class="errors" *ngIf="firstName.invalid && firstName.touched">
+        <li *ngIf="firstName.errors?.required">First name is required!</li>
+        <li *ngIf="firstName.errors?.minlength">First name have to more than 3 characters!</li>
+      </ul>
+    </div>
+
+    <div class="form-group secondName">
+      <label for="second-name"><span><i aria-hidden="true" class="fa fa-user"></i></span> second name:</label>
+      <br>
+      <input type="text" name="second-name" id="second-name" #secondName="ngModel" ngModel required [minlength]="3">
+      <ul class="errors" *ngIf="secondName.invalid && secondName.touched">
+        <li *ngIf="secondName.errors?.required">Second name is required!</li>
+        <li *ngIf="secondName.errors?.minlength">Second name have to more than 3 characters!</li>
+      </ul>
+    </div>
+
+    <div class="form-group">
+      <label for="address"><span><i aria-hidden="true" class="fa fa-address-card"></i></span> Address:</label>
+      <br>
+      <input type="text" name="address" id="address" #address="ngModel" ngModel required>
+      <ul class="errors" *ngIf="address.invalid && address.touched">
+        <li *ngIf="address.errors?.required">Address is required!</li>
+      </ul>
+    </div>
+
+    <div class="form-group phoneNumber">
+      <label for="phone-number"><span><i class="fa fa-phone" aria-hidden="true"></i></span> Phone number:</label>
+      <br>
+      <input type="text" name="phone-number" id="phone-number" #phoneNumber="ngModel" ngModel required [minlength]="8">
+      <ul class="errors" *ngIf="phoneNumber.invalid && phoneNumber.touched">
+        <li *ngIf="phoneNumber.errors?.required">Phone number is required!</li>
+        <li *ngIf="phoneNumber.errors?.minlength">Phone number must be more than 8 numbers!</li>
+      </ul>
+    </div>
+
+    <div class="form-group gender">
+      <label for="gender"><span><i class="fas fa-venus-mars" aria-hidden="true"></i></span> gender:</label>
+      <br>
+      <select name="gender" id="gender">
+        <option value="female">Female</option>
+        <option value="Male">Male</option>
+      </select>
+    </div>
+
+    <ng-template #disabledBtn> <button disabled class="login-btn">Register</button></ng-template>
+    <ng-template #enabledBtn> <button class="login-btn">Register</button></ng-template>
+    <ng-container *ngTemplateOutlet="form.invalid ? disabledBtn : enabledBtn" > </ng-container>
+  </form>
+
+</div>
