--- a/src/app/core/register/register.component.html
+++ b/src/app/core/register/register.component.html
@@ -1,4 +1,7 @@
 <div class="register-container" xmlns="http://www.w3.org/1999/html">
+  <article class="img">
+    <img src="/assets/images/istockphoto-866383490-612x612.jpg" alt="">
+  </article>
   <form #form="ngForm" (ngSubmit)="registerHandler(form)" xmlns:disabled="http://www.w3.org/1999/xhtml">
     <div class="form-group">
       <label for="email"><span><i aria-hidden="true" class="fa fa-envelope"></i></span> Email:</label>
