--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<div class="login-container">
+
+  <article class="img">
+    <img src="/assets/images/login.jpg" alt="image">
+  </article>
+
+  <form>
+
+    <div class="form-group">
+      <label for="email"><span><i aria-hidden="true" class="fa fa-envelope"></i></span> Email:</label>
+      <br>
+      <input type="email" name="email" id="email">
+      <ul class="errors">
+        <!-- <li *ngIf="passwordInput.errors?.required">Password is required!</li>
+        <li *ngIf="passwordInput.errors?.minlength">Password must be 8 or more characters!</li> -->
+      </ul>
+    </div>
+
+    <div class="form-group">
+      <label for="password"><span><i aria-hidden="true" class="fa fa-lock"></i></span> Password:</label>
+      <br>
+      <input type="password" name="password" id="password">
+      <ul class="errors">
+        <!-- <li *ngIf="passwordInput.errors?.required">Password is required!</li>
+        <li *ngIf="passwordInput.errors?.minlength">Password must be 8 or more characters!</li> -->
+      </ul>
+    </div>
+    <button>Login</button>
+  </form>
+
+</div>
