register is already , login is already , i have to connect login and register with spring boot

--- a/src/app/core/book/book.component.html
+++ b/src/app/core/book/book.component.html
@@ -28,7 +28,7 @@
                </article>
 
                    <article class="btn-buy">
-                       <a href="#">Buy</a>
+                       <a href="/books">Buy</a>
                        </article>
 
 
