--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -5,7 +5,6 @@
   </article>
 
   <form>
-
     <div class="form-group">
       <label for="email"><span><i aria-hidden="true" class="fa fa-envelope"></i></span> Email:</label>
       <br>
@@ -26,6 +25,12 @@
       </ul>
     </div>
     <button>Login</button>
+    <div class="errors">
+      <ul>
+        <li>Password or Email are invalid!</li>
+      </ul>
+    </div>
   </form>
+
 
 </div>
