--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -26,6 +26,12 @@ nav {
   display: flex;
   align-items: center;
   justify-content: flex-end
+  /*width: 100%;*/
+  /*height: 150px;*/
+  /*display: flex;*/
+  /*align-items: center;*/
+  /*justify-content: space-between;*/
+  /*flex-direction: row;*/
 }
 .nav-ul {
   margin: 0;
@@ -39,6 +45,14 @@ nav {
 /*  !*display: none;*!*/
 /*}*/
 
+.show-info {
+  font-size: 40px;
+  /*margin-right: 100px;*/
+  margin-top: 100px;
+  /*padding-left: 100px;*/
+
+}
+
 .nav-ul > li {
   margin: 0 20px 0 0;
 }
@@ -51,6 +65,19 @@ a {
   position: relative;
 }
 
+.notification {
+  border: 3px solid red;
+  background: red;
+  padding: 20px;
+  border-radius: 20px;
+  margin-top: 17px;
+  position: relative;
+  left: 15%;
+font-size: 30px;
+  bottom: -70px;
+  color: yellow;
+}
+
 .div-img > img{
   /* box-sizing: border-box; */
   /* width: 100%; */
@@ -58,7 +85,7 @@ a {
   height: 150px;
   left: 100px;
   object-fit: contain;
-
+  z-index: 2;
 }
 .store-name {
   position: relative;
