--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -21,6 +21,8 @@
 <!--      <li><a routerLink="books" routerLinkActive="active">Books</a></li>-->
 <!--      <li><a routerLink="register" routerLinkActive="active">Register</a></li>-->
 <!--      <li><a routerLink="login" routerLinkActive="active">Login</a></li>-->
+      <li><a routerLink="addBook" routerLinkActive="active">Add Book</a></li>
+      <li><a routerLink="books" routerLinkActive="active">Books</a></li>
       <li><a routerLink="orders" routerLinkActive="active">Orders</a></li>
       <li><a (click)="logout()" routerLink="home">Logout</a></li>
     </ul>
