--- a/src/app/core/shopping-card/shopping-card.component.html
+++ b/src/app/core/shopping-card/shopping-card.component.html
@@ -41,7 +41,7 @@
 
     <div class="price">Price:</div>
     <div class="total-price"> {{cart.book.price * cart.bookCount}}</div>
-    <div class="price right"> lev</div>
+    <div class="price right"> euro</div>
     <p><textarea readonly id="food-comment" style="resize: none">{{cart.book.title}} -title / {{cart.book.author}}
       -author / {{cart.book.issuedDate}} -issuedDate / {{cart.book.page}} -pages</textarea></p>
     <div class="product-id"></div>
